--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -66,13 +66,17 @@
     <Compile Include="SyntaxTree\CompilerDirectives\Hints.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\HppEmit.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\IfDef.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\IfOpt.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ImageBase.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ImplicitBuild.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\ImportedData.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\IoChecks.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\LegacyIfEnd.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\LibInfo.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\Link.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\LocalSymbols.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\LongStrings.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\Message.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\MethodInfo.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\MinEnumSize.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\NoDefine.cs" />
@@ -95,6 +99,7 @@
     <Compile Include="SyntaxTree\CompilerDirectives\SafeDivide.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ScopedEnums.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\StackFrames.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\StackMemSize.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\StrongLinkTypes.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\SymbolDefinitions.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\TypedPointers.cs" />
