--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -47,11 +47,15 @@
     <Compile Include="Parser\IParser.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\IfDirective.cs" />
     <Compile Include="SyntaxTree\Standard\AsmBlock.cs" />
+    <Compile Include="SyntaxTree\Standard\AsmFactor.cs" />
     <Compile Include="SyntaxTree\Standard\AsmLabel.cs" />
     <Compile Include="SyntaxTree\Standard\AsmOpCode.cs" />
     <Compile Include="SyntaxTree\Standard\AsmOperand.cs" />
     <Compile Include="SyntaxTree\Standard\AsmPrefix.cs" />
+    <Compile Include="SyntaxTree\Standard\AsmPseudoOp.cs" />
     <Compile Include="SyntaxTree\Standard\AsmStatement.cs" />
+    <Compile Include="SyntaxTree\Standard\AsmExpression.cs" />
+    <Compile Include="SyntaxTree\Standard\AsmTerm.cs" />
     <Compile Include="SyntaxTree\Standard\LocalAsmLabel.cs" />
     <Compile Include="SyntaxTree\Standard\Parameter.cs" />
     <Compile Include="SyntaxTree\Standard\TypeName.cs" />
